# abletonTrackingPlugin

./: .coverage  .coveragerc  README.md  config.yaml  pyproject.toml
src/cv_midi/: capture.py  config.py  main.py  mapper.py  midi_output.py  pipeline.py
src/cv_midi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cv_midi/detectors/: base.py  color.py  hands.py  motion.py  pose.py
tests/: test_capture.py  test_config.py  test_mapper.py  test_midi_output.py  test_motion.py  test_pipeline.py
